--- a/templates/blog.html
+++ b/templates/blog.html
@@ -4,7 +4,7 @@
 
 {% for post in posts %}
     <div class="post">
-        <div class="post-title">{{ post.title }}</div>
+        <a href="/blog/{{ post.key().id() }}"><h2>{{ post.title }}</h2></a>
         <pre class="post-body">{{ post.post }}</pre>
     </div>
 {% endfor %}
