--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -6,11 +6,13 @@
     <label>
         <div>title</div>
         <input type="text" name="title" value="{{ title }}">
+        <div class="error">{{ error_title }}</div>
     </label>
 
     <label>
         <div>post</div>
         <textarea name="post">{{ post }}</textarea>
+        <div class="error">{{ error_post }}</div>
     </label>
     
     <input type="submit">
