--- a/templates/singlepost.html
+++ b/templates/singlepost.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="post">
-    <div class="post-title">{{ post.title }}</div>
+    <div class="post-title"><h2>{{ post.title }}</h2></div>
     <pre class="post-body">{{ post.post }}</pre>
 </div>
 
