further cleaned up commits-created get_posts method

--- a/templates/base.html
+++ b/templates/base.html
@@ -60,6 +60,8 @@
     </head>
     <body>
 
+        <div class="error">{{ error }}</div>
+
         <a href='/blog'>
             <h1>Build-a-Blog</h1></a>
 
